compiler/testData/diagnostics/tests/varargs/unresolvedVarargType.fir.kt
fun testVarArgs(vararg v: <!UNRESOLVED_REFERENCE!>Smth<!>) {}
